erDiagram
  PROJECTS ||--o{ WEEKLY_REPORTS : has
  USERS ||--o{ WEEKLY_REPORTS : creates
  PROJECTS ||--o{ MONTHLY_REPORTS : has
  USERS ||--o{ MONTHLY_REPORTS : creates
  PROJECTS ||--o{ HANDOFF_REPORTS : has
  USERS ||--o{ HANDOFF_REPORTS : creates
  PROJECTS ||--o{ AI_SUMMARIES : has

  PROJECTS {
    uuid id PK
    uuid team_id FK
    uuid created_by FK
    string name
    text description
    string status
    date start_date
    date end_date
    timestamp created_at
    timestamp updated_at
  }

  USERS {
    uuid id PK
    string name
    string email UK
    text password_hash
    string role
    timestamp created_at
    timestamp updated_at
  }

  WEEKLY_REPORTS {
    uuid id PK
    uuid project_id FK
    uuid created_by FK
    timestamp week_start
    timestamp week_end
    text content
    int progress_rate
  }

  MONTHLY_REPORTS {
    uuid id PK
    uuid project_id FK
    uuid created_by FK
    timestamp month_start
    timestamp month_end
    text content
    int progress_rate
  }

  HANDOFF_REPORTS {
    uuid id PK
    uuid project_id FK
    uuid created_by FK
    string title
    text content
    int handoff_score
    jsonb missing_items_json
  }

  AI_SUMMARIES {
    uuid id PK
    uuid project_id FK
    uuid document_id FK
    string summary_type
    text summary
    jsonb extracted_json
    timestamp created_at
  }
